# engine

./: .gitignore  CMakeLists.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
cmake/: FindMyxmlpp.cmake
include/polymorph/: debug.hpp
include/polymorph/api/: AssetManager.hpp  DynamicLoader.hpp  SceneManager.hpp
include/polymorph/api/plugin/: APlugin.hpp  APluginConfig.hpp  PluginManager.hpp  Symbols.hpp
include/polymorph/api/scripting/: AComponentFactory.hpp  AConfigurableSerializableObject.hpp  AScriptFactory.hpp  ASerializableObject.hpp  ASerializableObjectFactory.hpp
include/polymorph/config/: CastHelper.hpp  XmlComponent.hpp  XmlEntity.hpp  XmlPluginConfig.hpp  XmlPropertyManager.hpp  XmlScene.hpp  XmlSerializableObject.hpp
include/polymorph/core/: Engine.hpp  Scene.hpp
include/polymorph/core/component/: AComponent.hpp  AComponent_templated.hpp  TransformComponent.cpp  TransformComponent.hpp
include/polymorph/core/entity/: Entity.hpp  Entity_templated.hpp
include/polymorph/debug/exception/: ConfigurationException.hpp  CoreException.hpp  ExceptionLogger.hpp  PluginException.hpp
include/polymorph/engine/: api.hpp  config.hpp  core.hpp  debug.hpp  types.hpp
include/polymorph/engine/api/: AssetManager.hpp  DynamicLoader.hpp  SceneManager.hpp
include/polymorph/engine/config/: XmlComponent.hpp  XmlEngine.hpp  XmlEntity.hpp  XmlPluginConfig.hpp  XmlPropertyManager.hpp  XmlScene.hpp  XmlSerializableObject.hpp
include/polymorph/engine/core/: Engine.hpp  (+1 more)
include/polymorph/time/: Time.hpp  Timer.hpp
include/polymorph/types/: Color.hpp  uuid.hpp
src/src/api/: AssetManager.cpp  DynamicLoader.cpp  SceneManager.cpp
src/src/config/: XmlComponent.cpp  XmlEngine.cpp  XmlEntity.cpp  XmlPluginConfig.cpp  XmlPropertyManager.cpp  XmlScene.cpp  XmlSerializableObject.cpp
src/src/core/: Engine.cpp  Scene.cpp
src/src/debug/: Logger.cpp
src/src/time/: Time.cpp  Timer.cpp
src/src/types/: Color.cpp  uuid.cpp
(+115 files in other folders)
